--- a/.github/workflows/mongo.yaml
+++ b/.github/workflows/mongo.yaml
@@ -3,12 +3,10 @@ name: Mongo Test
 on: [push]
 
 jobs:
-
-  runs-on: ubuntu-latest
-
-  steps:
-    - uses: actions/checkout@v2
-    - name: Pull and run MongoDB
-      run: |
-        docker pull mongo
-        docker run mongo
+  mongo_tester_job:
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Mongo tester action
+        uses: ./
+        id: hello
