--- a/.github/workflows/mongo.yaml
+++ b/.github/workflows/mongo.yaml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   mongo_tester_job:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
