--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,3 +10,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Mongo tester action
         uses: ./
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
