--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,20 +2,37 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   test-code:
     runs-on: ubuntu-latest
-    container: akshaybabloo/mongodb
+
+    services:
+      mongo:
+        image: mongo:8
+        ports:
+          - 27017:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: example
+        options: >-
+          --health-cmd="mongosh --eval 'db.adminCommand(\"ping\")'" 
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Checkout code
 
-      - name: Build the Docker image
-        run: ./entrypoint.sh
-        shell: bash
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.24'
+        name: Setup Go
+
+      - name: Test code
+        run: go test -v ./...
         env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: example
